src/snapshots/afrotd__parser__tests__interpreation_html_10.2.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A’s Punt wird geblockt, überquert die neutrale Zone und wird
            jenseits der neutralen Zone nicht von Team B berührt. Der Ball
            prallt zurück hinter die neutrale Zone, bevor sich ein Clipping
            oder ein Halten durch Team B ereignet. Der Ball ist zum Zeitpunkt
            des Fouls frei.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Das Foul ereignet sich während des Kicks. Wenn Team B als
                nächstes snappt, wird die Strafe nach dem Postscrimmage Kick
                Enforcement Prinzip durchgeführt.
            </p>
        </details>
    </div>
</article>
