src/snapshots/afrotd__parser__tests__interpreation_html_10.2.5_10.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.X
        </p>
    </div>
    <div class="message-body">
        <p>
            Team B foult während eines erfolgreichen Try.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Try wird nach der Strafdurchführung wiederholt oder die
                Strafe wird durch die Regel aufgehoben. Strafen für persönliche
                Fouls und unsportliche Verhalten-Fouls können beim
                nachfolgenden Kickoff oder vom Succeeding Spot in Extraperioden
                durchgeführt werden.
            </p>
        </details>
    </div>
</article>
