src/snapshots/afrotd__parser__tests__interpreation_html_10.2.5_16.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.XVI
        </p>
    </div>
    <div class="message-body">
        <p>
            Die Strafe für ein Team B-Foul nach einem erfolgreichen Try wird
            angenommen und soll beim Free Kick geahndet werden, dann: 1. foult
            Team A nach dem Try.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Führe die Strafen in der Reihenfolge ihres Geschehens beim
                Kickoff oder dem Succeeding Spot in Extraperioden durch. 2.
                foult Team B nach dem Try. Regelung: Führe die Strafen für
                beide Team B-Fouls in der Reihenfolge ihres Geschehens beim
                Kickoff oder dem Succeeding Spot in Extraperioden durch. 3.
                foulen Team A und Team B bevor eines der beiden Fouls
                vervollständigt ist. Regelung: Diese Fouls gleichen sich aus.
                Team B wird für sein ursprüngliches Foul beim Kickoff oder dem
                Succeeding Spot in Extraperioden bestraft.
            </p>
        </details>
    </div>
</article>
