src/snapshots/afrotd__parser__tests__interpreation_html_10.2.5_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Team B begeht ein Halten während Team A’s Touchdown-Lauf. Team A
            foult nach der Erzielung des Touchdowns.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Touchdown gilt. Die Strafe für Team B’s Halten wird durch
                die Regel abgelehnt. Team B hat die Wahl, die Strafe für Team
                A’s Foul beim Try, dem anschließenden Kickoff oder vom
                Succeeding Spot in Extraperioden durchführen zu lassen (Regel
                10.2.5.a.2 und 10.2.5.c).
            </p>
        </details>
    </div>
</article>
