src/snapshots/afrotd__parser__tests__interpreation_html_10.2.5_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Team B schlägt einen Gegner während oder nach Team A’s
            Touchdownlauf. Team B ist offside beim erfolgreichen Try.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Touchdown gilt, Disqualifikation des Team B-Spielers wegen
                der Schlägerei. Team A hat die Wahl, die Strafe für Team B’s
                Foul beim Try, dem anschließenden Kickoff oder vom Succeeding
                Spot in Extraperioden durchführen zu lassen. Nach dem
                erfolgreichen Try könnte Team A den Try wiederholen, wobei die
                Strafe für das Offside durchgeführt wird (Regel 10.2.5 und
                8.3.3.b).
            </p>
        </details>
    </div>
</article>
