src/snapshots/afrotd__parser__tests__interpreation_html_10.2.5_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Team B ist während eines erfolgreichen Fieldgoal-Downs offside.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A hat die Wahl, die Strafe vom Previous Spot anzunehmen
                und den Down zu wiederholen oder die Punkte durch die Ablehnung
                der Strafe anzunehmen.
            </p>
        </details>
    </div>
</article>
